# kisforth

./: .gitignore  CMakeLists.txt  README.md  ans-forth-standard.txt  cmake-pico  cmake-windows  design(preliminary).md  kisforth-v0.0.1-linux  kisforth-v0.0.1-pico.uf2
build-pico/core/include/: version.h
build-pico/pico/: kisforth_pico.uf2
build-pico/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/src/pioasmBuild-stamp/: pioasmBuild-source_dirinfo.txt
build-pico/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/: pioasmBuild-cfgcmd.txt  pioasmBuild-mkdirs.cmake
build-pico/pico/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
build-pico/pico/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
core/: CMakeLists.txt
core/include/: debug.h  floating.h  forth.h  tools.h
core/src/: debug.c  dictionary.c  floating.c  io_interface.c  memory.c  nucleus.c  repl.c  stack.c  test.c  text.c  tools.c
host/: CMakeLists.txt
host/src/: key_input.c  main.c
interpreter/: CMakeLists.txt
interpreter/include/: context.h  core.h  debug.h  dictionary.h  error.h  floating.h  forth.h  line_editor.h  memory.h  repl.h  stack.h  test.h  text.h  tools.h  types.h  util.h  version.h.in
interpreter/src/: context.c  core.c  debug.c  dictionary.c  error.c  floating.c  forth.c  line_editor.c  memory.c  repl.c  stack.c  test.c  text.c  tools.c  util.c
nix/: CMakeLists.txt
nix/src/: key_input.c  main.c
pc/: CMakeLists.txt
pc/src/: main.c  pc_io.c
pico/: CMakeLists.txt  lwipopts.h
pico/include/: lwipopts.h  stdlib_words.h  systick.h  wifi_support.h  wifi_words.h
pico/src/: key_input.c  main.c  pico_io.c  stdlib_words.c  systick.c  wifi_support.c  wifi_words.c
shared/: CMakeLists.txt
shared/include/: startup.h
shared/src/: startup.c
windows/: CMakeLists.txt
windows/src/: key_input.c  main.c
